# LargeScaleClinicalEmbedding

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CodeEmbeddingArchitecture.eps  LICENSE  README.md  enumeratePairs  no_mpi_build.sh
cooccurrenceMatrix/: CMakeLists.txt  README.md
cooccurrenceMatrix/src/: CMakeLists.txt  enumeratePairs.cpp  enumeratePairs.hpp  main.cpp  reindex_mat.cpp  sameDayMain.cpp
cooccurrenceMatrix/tests/: CMakeLists.txt  enumeratePairs.py  makeTst.py  test.csv  test.parquet  testDumpTable.cpp  testRead.cpp
recipes/: build.sh  cross-linux.cmake  vars.sh
src/: CMakeLists.txt  enum_old.cpp  enumeratePairs.cpp  enumeratePairs.hpp  main.cpp  main_old.cpp  ppmisvd.cpp  ppmisvd.hpp  test_make
svd/: CMakeLists.txt  README.md
svd/src/: CMakeLists.txt  main.cpp  ppmisvd.cpp  ppmisvd.hpp
svd/tests/: CMakeLists.txt  doSVD.py  makeTst.py  testIJRead.cpp
tests/: CMakeLists.txt  U.test.petsc  a.out  enumeratePairs.py  makeTst.py  readSVD.py  test.parquet  testDumpTable.cpp  testGeneratePairs.cpp  testRead.cpp
