
cmake_minimum_required(VERSION 3.5)
project(tests CXX)

enable_testing()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CPPFLAGS} -O3 -D_GLIBCXX_USE_CXX11_ABI=1 ${OpenMP_CXX_FLAGS}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFLAGS} -D_GLIBCXX_USE_CXX11_ABI=1 ${OpenMP_C_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LDFLAGS}")
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
find_package(MPI)
find_package(Threads)
include_directories($ENV{CONDA_PREFIX}/include)
include_directories($ENV{PETSC_DIR}/include)
include_directories($ENV{SLEPC_DIR}/include)
include_directories($ENV{PETSC_DIR}/$ENV{PETSC_ARCH}/include/)
include_directories($ENV{SLEPC_DIR}/$ENV{PETSC_ARCH}/include/)
include_directories($ENV{SLEPC_DIR}/lib/slepc/conf/)
include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
#file(GLOB TEST_SRCS RELATIVE ${CMAKE_SOURCE_DIR} tests/*.cpp)
file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

link_directories($ENV{CONDA_PREFIX}/lib/)
link_directories($ENV{PETSC_DIR}/$ENV{PETSC_ARCH}/lib/)
link_directories($ENV{SLEPC_DIR}/$ENV{PETSC_ARCH}/lib/)

foreach(testSrc ${TEST_SRCS})
    get_filename_component(testName ${testSrc} NAME_WE)
    add_executable(${testName} ${testSrc} ${CMAKE_SOURCE_DIR}/src/ppmisvd.cpp)
    target_link_libraries(${testName} boost_unit_test_framework)
    target_link_libraries(${testName} parquet)
    target_link_libraries(${testName} arrow)
    target_link_libraries(${testName} blas)
    target_link_libraries(${testName} petsc)
    target_link_libraries(${testName} slepc)
    target_link_libraries(${testName} ${MPI_C_LIBRARIES})
    target_link_libraries(${testName} ${CMAKE_THREAD_LIBS_INIT})
    set_target_properties(${testName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/testBin)
    #set_target_properties(${testName} PROPERTIES LINKER_LANGUAGE CXX)
    add_test(NAME ${testName} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/testBin COMMAND ${CMAKE_SOURCE_DIR}/testBin/${testName})
endforeach(testSrc)

